Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-56927

qtmultimedia build failed on WinRT and Windows Phone

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P0: Blocker
    • 5.9.0 Alpha
    • 5.9.0 Alpha
    • Multimedia
    • None
    • WinRT
    • 77e6d1cc403d69c509206fd0c0ba4f589277e212

    Description

      https://codereview.qt-project.org/#/c/174657/
      http://testresults.qt.io/logs/qt/qtmultimedia/827cfc97a1a8f0f660238e2a3b5472669f0f2077/WindowsWindows_8_1x86_64WinPhoneWindows_Phone_8_1armv4MSVC2013qtci-windows-8-x86_64-b40ec6DebugAndRelease_Release_DisableTests/aae8b74496730b7ba4c61e0a6cffe5c50c4a3057/buildlog.txt.gz
      http://10.212.3.36:8080/coin/integration/qt/qt5/tasks/web_qt_qt5_1478289905233

      c:\Users\qt\work\install\include\QtCore/qobjectdefs_impl.h(250): error C2338: Signal and slot arguments are not compatible (narrowing)
      c:\Users\qt\work\install\include\QtCore/qobjectdefs_impl.h(266): note: see reference to class template instantiation 'QtPrivate::AreArgumentsCompatible<QCamera::State,bool>' being compiled
      c:\Users\qt\work\install\include\QtCore/qobject.h(235): note: see reference to class template instantiation 'QtPrivate::CheckCompatibleArguments<QtPrivate::List<QCamera::State>,QtPrivate::List<bool>>' being compiled
      qwinrtcameraimagecapturecontrol.cpp(131): note: see reference to function template instantiation 'QMetaObject::Connection QObject::connect<void(__cdecl QCameraControl::* )(QCamera::State),void(__cdecl QCameraImageCaptureControl::* )(bool)>(const QCameraControl *,Func1,const QCameraImageCaptureControl *,Func2,Qt::ConnectionType)' being compiled
              with
              [
                  Func1=void (__cdecl QCameraControl::* )(QCamera::State),
                  Func2=void (__cdecl QCameraImageCaptureControl::* )(bool)
              ]
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            owolff Oliver Wolff
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes