Fixed winrt/windows phone build

readyForCaptureChanged cannot be connected to stateChanged as their
arguments are not compatible (error: narrowing).

Task-number: QTBUG-56927
Change-Id: I31ebc79a22a2d3565a16ab664163bf2d574a527f
Reviewed-by: Maurice Kalinowski <maurice.kalinowski@qt.io>